# kanden

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  rn.sh
benches/: anvil.rs  block.rs  decode_array.rs  idle.rs  many_players.rs  packet.rs  var_int.rs  var_long.rs
crates/: README.md
crates/kanden_advancement/: Cargo.toml  README.md
crates/kanden_advancement/src/: event.rs  lib.rs
crates/kanden_anvil/: Cargo.toml  README.md
crates/kanden_anvil/src/: bevy.rs  lib.rs  parsing.rs
crates/kanden_boss_bar/: Cargo.toml  README.md
crates/kanden_build_utils/: Cargo.toml  README.md
crates/kanden_command/: Cargo.toml  README.md
crates/kanden_command/src/: graph.rs  handler.rs  manager.rs  parsers.rs  scopes.rs
crates/kanden_command/src/parsers/: color.rs  gamemode.rs  strings.rs
crates/kanden_command_macros/: Cargo.toml  README.md
crates/kanden_entity/: Cargo.toml  README.md  build.rs
crates/kanden_entity/extracted/: entities.json
crates/kanden_entity/src/: active_status_effects.rs  activity.rs  attributes.rs  flags.rs  hitbox.rs  lib.rs  query.rs  tracked_data.rs
crates/kanden_generated/: Cargo.toml  README.md
crates/kanden_generated/extracted/: attributes.json  data_components.json  effects.json  items.json  misc.json  packets.json  sounds.json
crates/kanden_generated/src/: block.rs  lib.rs
crates/kanden_ident/: Cargo.toml  README.md
crates/kanden_ident/src/: lib.rs
crates/kanden_ident_macros/: Cargo.toml  README.md
crates/kanden_inventory/: Cargo.toml  README.md
crates/kanden_lang/: Cargo.toml  README.md  build.rs
crates/kanden_lang/extracted/: translation_keys.json
crates/kanden_math/: Cargo.toml  README.md
crates/kanden_nbt/: Cargo.toml
crates/kanden_network/: Cargo.toml  README.md
crates/kanden_network/src/: connect.rs  legacy_ping.rs  lib.rs  packet_io.rs
crates/kanden_player_list/: Cargo.toml  README.md
crates/kanden_player_list/src/: lib.rs
crates/kanden_protocol/: Cargo.toml  README.md
crates/kanden_protocol/src/: arm.rs  biome_pos.rs  block_pos.rs  chunk_pos.rs  either.rs  global_pos.rs  id_or.rs  id_set.rs  item.rs  lib.rs  lpvec.rs  packets.rs  profile.rs  realtive.rs  sound.rs  text_component.rs  velocity.rs
crates/kanden_protocol/src/impls/: math.rs  other.rs  string.rs
crates/kanden_protocol/src/packets/common/: clear_dialog_s2c.rs  custom_click_action_c2s.rs  show_dialog_s2c.rs
crates/kanden_protocol/src/packets/configuration/: accept_code_of_conduct_c2s.rs  client_information_c2s.rs  code_of_conduct_s2c.rs  cookie_request_s2c.rs  cookie_response_c2s.rs  custom_payload_c2s.rs  custom_payload_s2c.rs  disconnect_s2c.rs  registry_data_s2c.rs  resource_pack_push_s2c.rs  server_links_s2c.rs  store_cookie_s2c.rs  transfer_s2c.rs  update_enabled_features_s2c.rs
crates/kanden_protocol/src/packets/login/: cookie_request_s2c.rs  cookie_response_c2s.rs  custom_query_s2c.rs
crates/kanden_protocol/src/packets/play/: add_entity_s2c.rs  block_entity_data_s2c.rs  boss_event_s2c.rs  change_game_mode_c2s.rs  chat_command_signed_c2s.rs  client_information_c2s.rs  command_suggestions_s2c.rs  commands_s2c.rs  container_click_c2s.rs  cookie_request_s2c.rs  cookie_response_c2s.rs  custom_payload_c2s.rs  custom_payload_s2c.rs  damage_event_s2c.rs  debug_block_value_s2c.rs  debug_chunk_value_s2c.rs  debug_entity_value_s2c.rs  debug_event_s2c.rs  debug_subscription_request_c2s.rs  disconnect_s2c.rs  disguised_chat_s2c.rs  entity_position_sync_s2c.rs  explode_s2c.rs  game_test_highlight_pos_s2c.rs  interact_c2s.rs  level_chunk_with_light_s2c.rs  level_particles_s2c.rs  login_s2c.rs  map_item_data_s2c.rs  mount_screen_open_s2c.rs  move_entity_pos_rot_s2c.rs  move_player_pos_c2s.rs  move_player_pos_rot_c2s.rs  move_vehicle_c2s.rs  move_vehicle_s2c.rs  open_screen_s2c.rs  place_ghost_recipe_s2c.rs  player_chat_s2c.rs  player_combat_kill_s2c.rs  player_command_c2s.rs  (+32 more)
crates/kanden_protocol_macros/: Cargo.toml  README.md
crates/kanden_registry/: Cargo.toml  README.md
crates/kanden_registry/extracted/: registry_codec.json  tags.json
crates/kanden_registry/src/: biome.rs  codec.rs  dimension_type.rs  environment_attribute.rs  lib.rs  serde.rs  tags.rs
crates/kanden_scoreboard/: Cargo.toml  README.md
crates/kanden_scoreboard/src/: components.rs  lib.rs
crates/kanden_server/: Cargo.toml  README.md
crates/kanden_server/src/: abilities.rs  action.rs  brand.rs  chunk_view.rs  client.rs  client_command.rs  client_settings.rs  custom_payload.rs  event_loop.rs  hand_swing.rs  interact_block.rs  interact_entity.rs  interact_item.rs  keepalive.rs  layer.rs  lib.rs  message.rs  movement.rs  op_level.rs  resource_pack.rs  spawn.rs  status.rs  status_effect.rs  teleport.rs  title.rs
crates/kanden_server/src/layer/: bvh.rs  chunk.rs  entity.rs  message.rs
crates/kanden_server/src/layer/chunk/: chunk.rs  loaded.rs  paletted_container.rs  unloaded.rs
crates/kanden_server_common/: Cargo.toml  README.md
crates/kanden_server_common/src/: despawn.rs  lib.rs
crates/kanden_spatial/: Cargo.toml  README.md
crates/kanden_text/: Cargo.toml  README.md
crates/kanden_text/src/: into_text.rs  lib.rs  tests.rs
crates/kanden_weather/: Cargo.toml  README.md
crates/kanden_weather/src/: lib.rs
crates/kanden_world_border/: Cargo.toml  README.md
crates/kanden_world_border/src/: lib.rs
examples/: advancement.rs  anvil_loading.rs  bench_players.rs  biomes.rs  block_entities.rs  boss_bar.rs  building.rs  chest.rs  combat.rs  command.rs  cow_sphere.rs  ctf.rs  custom_npc.rs  death.rs  entity_hitbox.rs  game_of_life.rs  item_components.rs  parkour.rs  particles.rs  player_list.rs  potions.rs  resource_pack.rs  server_list_ping.rs  terrain.rs  text.rs  weather.rs  world_border.rs
src/: lib.rs  testing.rs
src/tests/: boss_bar.rs  client.rs  example.rs  hunger.rs  potions.rs  scoreboard.rs
tools/playground/: Cargo.toml  README.md
tools/playground/src/: extras.rs  main.rs  playground.template.rs
tools/stresser/: Cargo.toml  README.md
tools/stresser/src/: stresser.rs
website/: README.md  book.toml  build.sh  config.toml
(+41 files in other folders)
