[package]
name = "kanden_build_utils"
description = "Common build script utilities for Kanden"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
syn.workspace = true
proc-macro2.workspace = true
