[package]
name = "kanden_command"
description = "Command management for Kanden"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_derive.workspace = true
bevy_ecs.workspace = true
byteorder.workspace = true
ordered-float.workspace = true
petgraph.workspace = true
thiserror.workspace = true
tracing.workspace = true

kanden_server.workspace = true
kanden_text.workspace = true
