[package]
name = "kanden_entity"
description = "Minecraft entities for Kanden"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bitfield-struct.workspace = true
derive_more.workspace = true
kanden_math.workspace = true
paste.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
uuid.workspace = true
kanden_server_common.workspace = true
kanden_nbt.workspace = true
kanden_generated.workspace = true
kanden_protocol.workspace = true
indexmap.workspace = true

[build-dependencies]
kanden_generated.workspace = true
anyhow.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
serde_json.workspace = true
heck.workspace = true
serde.workspace = true
kanden_build_utils.workspace = true
