[package]
name = "kanden_entity"
version.workspace = true
edition.workspace = true
description = "Minecraft entities for Kanden"
documentation.workspace = true
readme = "README.md"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bitfield-struct.workspace = true
derive_more.workspace = true
indexmap.workspace = true
kanden_generated.workspace = true
kanden_math.workspace = true
kanden_nbt.workspace = true
kanden_protocol.workspace = true
kanden_server_common.workspace = true
paste.workspace = true
rand.workspace = true
rustc-hash.workspace = true
serde.workspace = true
tracing.workspace = true
uuid.workspace = true

[build-dependencies]
anyhow.workspace = true
heck.workspace = true
kanden_build_utils.workspace = true
kanden_generated.workspace = true
kanden_protocol.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true

[lints]
workspace = true
