[package]
name = "kanden_generated"
version.workspace = true
edition.workspace = true
description = "Generated code for kanden and kanden_protocol"
documentation.workspace = true
readme = "README.md"
repository.workspace = true
license.workspace = true
build = "build/main.rs"

[dependencies]
kanden_ident.workspace = true
kanden_math.workspace = true
uuid.workspace = true

[build-dependencies]
anyhow.workspace = true
heck.workspace = true
kanden_build_utils.workspace = true
kanden_ident.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
