[package]
name = "kanden_ident"
description = "Parse and create Minecraft's resource identifiers"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
kanden_ident_macros.workspace = true
