[package]
name = "kanden_network"
description = "Login and socket code for Kanden"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

# TODO: make encryption and compression optional features.

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bytes.workspace = true
flume.workspace = true
hmac.workspace = true
num-bigint.workspace = true
rand.workspace = true
rsa-der.workspace = true
rsa.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
kanden_server.workspace = true
kanden_lang.workspace = true
kanden_protocol = { workspace = true, features = [
    "encryption",
    "compression",
] }

[dependencies.reqwest]
workspace = true
default-features = false
# Avoid OpenSSL dependency on Linux.
features = ["rustls-tls", "json"]
