[package]
name = "kanden_player_list"
description = "Player list (tablist) support for Kanden"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bitfield-struct.workspace = true
derive_more.workspace = true
kanden_server.workspace = true
