[package]
name = "kanden_protocol"
description = "Protocol library for Minecraft: Java Edition"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
encryption = ["dep:aes", "dep:cfb8"]
compression = ["dep:flate2"]

[dependencies]
bevy_ecs.workspace = true                                 # TODO: make this optional
kanden_math.workspace = true
kanden_generated.workspace = true
kanden_text.workspace = true
kanden_nbt = { workspace = true, features = ["binary"] }
kanden_protocol_macros.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
byteorder.workspace = true
uuid.workspace = true
kanden_ident.workspace = true
base64.workspace = true
url.workspace = true
serde_json.workspace = true
tracing.workspace = true
bytes.workspace = true
bitfield-struct.workspace = true
derive_more = { workspace = true, features = ["from", "into", "deref", "deref_mut", "as_ref"] }
cfb8 = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
aes = { workspace = true, optional = true }
indexmap.workspace = true
crc32c.workspace = true

[dev-dependencies]
rand.workspace = true
