[package]
name = "kanden_registry"
description = "Dynamic registries for Kanden"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
indexmap.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
kanden_protocol.workspace = true
anyhow.workspace = true
kanden_ident.workspace = true
kanden_nbt = { workspace = true, features = ["serde"] }
kanden_server_common.workspace = true
