[package]
name = "kanden_spatial"
description = "Spatial partitioning for entities in Kanden"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
approx.workspace = true
rayon.workspace = true
vek.workspace = true
