[package]
name = "kanden_text"
description = "Parsing and writing Minecraft's JSON text format"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["serde"] }
kanden_ident.workspace = true
kanden_nbt.workspace = true
bitfield-struct.workspace = true