[package]
name = "kanden_weather"
description = "Weather support for Kanden"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
kanden_server.workspace = true
bevy_ecs.workspace = true
bevy_app.workspace = true
derive_more.workspace = true