[package]
name = "playground"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
kanden_math.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
kanden_server_common.workspace = true
kanden.workspace = true