[package]
name = "stresser"
description = "A stresser for Kanden Minecraft server framework development purposes"
authors = ["qualterz <qualterz@tutamail.com>"]
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
uuid = { workspace = true, features = ["v4"] }
kanden_protocol.workspace = true
